src/assets/css/main.css
@import './common.css'; /*USGS Viz ID Stylesheet*/
@import './custom.css'; /*USGS Viz ID Stylesheet*/

/* whole page except header fit within viewport - no scrolling */
#app {
  /* height: calc(100vh + 87px); 87 is the height of the USGS header */
  margin: 0 auto;
}

/* css styles specific to page content exclusive of header and footer*/
/* NOT component-specific */
#visualization-container {
  margin: 5rem 0 5rem 0;
}
/* set color of links throughout */
a {
  color: var(--color-link);
  font-weight: 600;
  text-decoration: underline;
  cursor: pointer;
}
/* sets width of text column throughout components */
.text-container {
  max-width: 70rem; /* 70 pixels on desktop */
  margin: 0 auto 0 auto;
  @media only screen and (max-width: 600px) {
    max-width: 90vw; /* 90% of view width on mobile */
  }
}
/* sets max-width of figure elements throughout components */
.figure-container {
  max-width: 90vw;
  margin: 0 auto 0 auto;
}
text {
  user-select: none;
}
.emph {
  font-weight: 800;
}
.toggle-container {
  margin-top: 1rem;
}
.extra-line-spacing {
  line-height: 1.8;
}
.title {
  font-family: sans-serif; /* This is fallback font for old browsers */
  font-family: var(--title-font);
} 
.section-title {
  font-family: sans-serif; /* This is fallback font for old browsers */
  font-family: var(--title-font);
  width: 100%;
  text-align:left; 
  border-bottom: 1px solid var(--color-lowlight); 
  overflow: inherit;
  line-height: 1.2;
}
.section-title span {
  position: relative;
  top: 1rem;
}
.section-subtitle {
  color: var(--color-subtitle-text);
  font-weight: 300;
  margin-bottom: 3rem;
  line-height: 1.2;
}
.group-label {
  color: black;
  padding: 0.1em 0.4em;
  border-radius: 8px;
  margin: 0 0.2em;
  display: inline-block;
  font-weight: 500;
  line-height: 1.4;
}
.tooltip-span {
  position: relative;
  cursor: pointer;
  display: inline-block;
  border-bottom: 1px dotted rgba(54, 54, 54, 0.8);
  font-weight: 700;
  z-index: 10;
}
.tooltiptext {
  visibility: hidden;
  width: 380px;
  background-color: #555;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 0.9rem 0.65rem;
  position: absolute;
  z-index: 1;
  margin-left: -170px;
  margin-top: 2.3rem;
  opacity: 0;
  transition: opacity 0.3s;
}
.tooltip-group:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

